--- a/style .css
+++ b/style .css
@@ -1,11 +1,23 @@
 body {
 background: #CCCCCC
-   {
-
-   p {
-text-align: center;
 }
 
-em strong {
-color: red;
+#banner {}
+
 }
+
+h1 {
+  text-align: center
+  }
+     p {
+
+  text-align:center;
+  }
+
+  #caramelo {
+    font-size: 20px
+  }
+
+  em strong {
+  color: Red;
+  }
