--- a/style .css
+++ b/style .css
@@ -1,12 +1,19 @@
 body {
-background: #CCCCCC
+
 }
 
 #banner {}
 
 }
 
-h1 {
+.principal{
+background: #CCCCCC
+padding: 30px;
+}
+
+.titulo-principal {
+padding-left: 20px;
+.titulo-centralizado {
   text-align: center
   }
      p {
@@ -21,3 +28,27 @@ h1 {
   em strong {
   color: Red;
   }
+
+.itens {
+font-style: italic;
+}
+
+.beneficios {
+  background: #FFFFFF;
+padding:20px;
+}
+
+h2 {
+text-align: center;
+}
+ul{
+display: inline-block;
+vertical-align: top;
+width:20%;
+
+} martin-right: ;
+
+.imagembeneficios
+width:50%;
+
+}
